Fixed: wflow-consoleweb - Process Builder - End node showing invisible icon. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/pbuilder/css/pbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/pbuilder/css/pbuilder.css
@@ -117,9 +117,13 @@
 .end{
     width: 30px;
     height: 30px;
+    min-height: 30px !important;
     background: orangered;
     border-radius: 20px;
     border: double 5px white;
+}
+.end:after{
+    display: none !important;
 }
 .node_label {
     overflow: hidden;
